--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  box-sizing: border-box;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 a {
   @apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600
 }
